# mathex

./: package-lock.json  package.json  pnpm-lock.yaml
backend/: .gitignore  Cargo.toml
backend/migrations/: 20220822100300_create_tables.sql
backend/src/: main.rs
backend/src/api/: auth.rs  competition.rs  docs.rs  error.rs  mod.rs  team.rs
backend/src/database/: mod.rs  schema.rs
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.html
frontend/src/lib/: Sheet.svelte  Timer.svelte
frontend/src/routes/: +page.svelte
prisma/: schema.prisma
src/: app.html
src/lib/: Login.svelte  checks.ts  kv.ts  stores.ts
src/lib/buttons/: TabButton.svelte
src/lib/elements/: Input.svelte  SectionTitle.svelte  SubmitButton.svelte  TabButton.svelte
src/lib/layouts/: Pane.svelte  TabLayout.svelte
src/lib/views/: Login.svelte  Teams.svelte
src/routes/: fs-disp.svelte
src/routes/admin/: __layout.svelte  index.svelte
src/routes/api/: getConfig.ts  newRound.ts  pwcheck.ts
src/routes/api/round/: new.ts
src/routes/api/state/: round.ts
src/routes/api/team/: index.ts  new.ts
