[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "postgres"] }
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-actix-web = "0.6"
tracing = "*"
anyhow = "1.0.62"
dotenv = "0.15.0"
